# WDSF-API

./: .gitignore
python-client/: .gitignore  README.md  pyproject.toml
python-sdk/: Makefile  README.md  pyproject.toml
python-sdk/tests/: conftest.py  test_config.py
python-sdk/tests/competitions/: conftest.py  test_queries.py
python-sdk/tests/lib/: datetime.py
python-sdk/tests/resources/: .test.env
python-sdk/wdsf_python_client/: query.py
python-sdk/wdsf_python_client/competitions/: provider.py  queries.py
python-sdk/wdsf_python_sdk/: config.py
python-sdk/wdsf_python_sdk/competitions/: models.py  provider.py  queries.py
python-sdk/wdsf_python_sdk/lib/: datetime.py  serialisation.py
